# datamake

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  attach.sql  attach_err.txt  err.txt  install.sh
.claude/skills/verify/: SKILL.md
.github/workflows/: base-image.yml  ci.yml  release.yml
docs/: README.md  incremental.md
docs/adr/: 0001-deploy-command.md  0002-kubernetes-target.md  0003-generic-source-definitions.md  0004-versions-and-executions.md  0005-incremental-source-loading.md  0006-non-table-warehouse-reads.md  0007-query-connection-sources.md  0008-declarative-incremental-materialization.md  0009-snowflake-connector.md  0010-postgres-connector.md
docs/concepts/: composable-data-products.md
docs/guides/: incremental.md  kubernetes.md  postgres.md  snowflake.md
examples/orders/: .gitignore  README.md  cell.yaml
examples/orders/profiles/: local.yaml
examples/orders/sql/: orders_daily.sql  stg_orders.sql
scripts/: release.sh
src/: cli.rs  init.rs  logging.rs  main.rs  manifest.rs  ops.rs  publish.rs  release.rs  store.rs  timeutil.rs  verify.rs
src/config/: bindings.rs  deploy.rs  mod.rs  schema.rs
src/config/connections/: bigquery.rs  mod.rs  postgres.rs  snowflake.rs
src/deploy/: artifact.rs  mod.rs  preflight.rs  target.rs
src/deploy/targets/: kubernetes.rs  mod.rs
src/deploy/targets/kubernetes/: apply.rs  mod.rs  preflight.rs  render.rs  schema.rs
src/engine/: connectors.rs  mod.rs  run_summary.rs
src/engine/connectors/: bigquery.rs  mod.rs  postgres.rs  snowflake.rs
src/serve/: mod.rs  openapi.rs
test/integrations/: README.md  cli.rs
test/integrations/kind_e2e/: README.md  run.sh
test/integrations/kind_e2e/cell/: cell.yaml
test/integrations/kind_e2e/cell/deploy/: e2e.yaml
test/integrations/kind_e2e/cell/profiles/: e2e.yaml
test/integrations/kind_e2e/cell/sql/: orders_daily.sql  stg_orders.sql
test/integrations/kind_e2e/manifests/: minio.yaml  postgres.yaml
test/integrations/orders/: .gitignore
test/integrations/orders-secured/: .gitignore  cell.yaml  principals.json
test/integrations/orders-secured/profiles/: local.yaml  missing-principals.yaml
test/integrations/orders-secured/sql/: orders_daily.sql
test/integrations/orders/deploy/: prod.yaml
test/integrations/orders/profiles/: local.yaml  prod.yaml
test/integrations/orders/sql/: orders_daily.sql  stg_orders.sql
tests/: bigquery_query_correctness.rs  postgres_connector.rs
