[package]
name = "datamk"
version = "0.0.0"
edition = "2021"
description = "the cell — reduce time to value for data"
license = "Apache-2.0"

[[bin]]
name = "datamk"
path = "src/main.rs"

[features]
default = ["kubernetes"]
# Kubernetes deploy target. ADR 0001 ships a dep-free stub (schema validation +
# dry-run plan); ADR 0002 adds kube/k8s-openapi to this feature for real apply.
kubernetes = []

# Integration tests live under test/integrations/ (alongside their fixture cells)
# rather than the default tests/ dir.
[[test]]
name = "integrations"
path = "test/integrations/cli.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }   # preserves declared column order
anyhow = "1"
thiserror = "1"
semver = "1"
duckdb = { version = "1", features = ["bundled"] }    # compiles DuckDB; heavy first build
sha2 = "0.10"                                         # content hash of the deploy artifact bundle
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
