[package]
name = "datamk"
version = "0.0.0"
edition = "2021"
description = "the cell — reduce time to value for data"
license = "Apache-2.0"

[[bin]]
name = "datamk"
path = "src/main.rs"

[features]
default = ["kubernetes"]
# Kubernetes deploy target. Pulls in kube/k8s-openapi (ADR 0002) for real
# server-side apply; `--no-default-features` gets the lean run/serve build with
# neither compiled.
# `tokio/time` is only needed by the init-Job wait loop (apply.rs's
# `apply_and_wait_init`) -- gated here, not on the base `tokio` line, so
# `--no-default-features` doesn't pull in a timer driver it never uses.
kubernetes = ["dep:kube", "dep:k8s-openapi", "tokio/time"]

# Integration tests live under test/integrations/ (alongside their fixture cells)
# rather than the default tests/ dir.
[[test]]
name = "integrations"
path = "test/integrations/cli.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }   # preserves declared column order
anyhow = "1"
thiserror = "1"
semver = "1"
duckdb = { version = "1", features = ["bundled"] }    # compiles DuckDB; heavy first build
sha2 = "0.10"                                         # content hash of the deploy artifact bundle
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kubernetes deploy target (feature = "kubernetes"). rustls/ring restated
# explicitly so a security-relevant TLS backend can't silently change on a minor
# bump; pure-Rust TLS needs no system libs (no Dockerfile change). Pinned to the
# 3.x line + explicit v1_33 API so `cargo update` can't drift the k8s surface.
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls", "ring"], optional = true }
k8s-openapi = { version = "0.27", features = ["v1_33"], optional = true }
